[gd_scene load_steps=10 format=2]

[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://textures/Enemies.png" type="Texture" id=3]
[ext_resource path="res://enemies/Fleaman.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.5, 7 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 112, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 128, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 6.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Thinking",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 96.0

[node name="Fleaman" type="KinematicBody2D" groups=["AffectedByClock", "AffectedByRosary"]]
collision_layer = 8
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "Thinking"
playing = true

[node name="Enemy" type="Node" parent="."]
script = ExtResource( 2 )
enemyName = "Fleaman"
damage = 3
points = 500
hitbox = NodePath("../Hitbox")
drop = "enemy"

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0.5, 0 )
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -8, -8, 16, 16 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SimonDetector" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SimonDetector"]
shape = SubResource( 5 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited" flags=6]
[connection signal="body_entered" from="SimonDetector" to="." method="_on_SimonDetector_body_entered" flags=6]
